// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToClaimDetailsArray should map the gql data only including fields on the picklist 1`] = `
[
  {
    "costCategoryId": "category-id-0",
    "value": 10000,
  },
  {
    "costCategoryId": "category-id-1",
    "value": 10000,
  },
  {
    "costCategoryId": "category-defaults",
    "value": 0,
  },
]
`;

exports[`mapToClaimDetailsArray should map the gql data to the correct Dtos filtering out for not New and not Claim Detail records 1`] = `
[
  {
    "costCategoryId": "category-id-0",
    "periodEnd": 2020-03-21T00:00:00.000Z,
    "periodId": 2,
    "periodStart": 2020-01-21T00:00:00.000Z,
    "value": 10000,
  },
  {
    "costCategoryId": "category-id-1",
    "periodEnd": 2020-03-21T00:00:00.000Z,
    "periodId": 3,
    "periodStart": 2020-01-21T00:00:00.000Z,
    "value": 10000,
  },
  {
    "costCategoryId": "category-defaults",
    "periodEnd": null,
    "periodId": 0,
    "periodStart": null,
    "value": 0,
  },
]
`;
